force-app/main/default/objects/TV_Series_Episode__c/TV_Series_Episode__c.object-meta.xml
<CustomObject>
    <label>TV Series Episode</label>
    <nameField>
        <label>TV Series Episode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TV Series Episodes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>