force-app/main/default/objects/TV_Series_Episode__c/fields/Episode_Story__c.field-meta.xml
<CustomField>
    <fullName>Episode_Story__c</fullName>
    <label>Episode Story</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>