force-app/main/default/objects/TV_Series_Episode__c/fields/TV_Series__c.field-meta.xml
<CustomField>
    <fullName>TV_Series__c</fullName>
    <label>TV Series</label>
    <referenceTo>TV_Series__c</referenceTo>
    <relationshipLabel>TV Series Episodes</relationshipLabel>
    <relationshipName>TV_Series_Episodes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>