force-app/main/default/objects/TV_Series_Episode__c/fields/TV_Series_Season__c.field-meta.xml
<CustomField>
    <fullName>TV_Series_Season__c</fullName>
    <label>TV Series Season</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TV_Series_Season__c.TVSeries__c</field>
            <operation>equals</operation>
            <valueField>$Source.TV_Series__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TV_Series_Season__c</referenceTo>
    <relationshipLabel>TV Series Episodes</relationshipLabel>
    <relationshipName>TV_Series_Episodes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>