force-app/main/default/objects/TV_Series_Episode__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TV_Series__c</columns>
    <columns>TV_Series_Season__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>